# devine-eyes

./: .cursorrules  .gitignore  ARCHITECTURE_DIAGRAM.md  DESIGN_SUMMARY.md  Makefile  PHASE4_SUMMARY.md  README.md  SYSTEM_DESIGN.md  WINDOWS_NPCAP_SETUP.md  docker-compose.yml  test-http-monitoring.ps1
backend/: .dockerignore  BUILD_INSTRUCTIONS.md  CROSS_PLATFORM_NETWORK_CAPTURE.md  Cargo.toml  DOCKER_README.md  HTTP_REQUEST_CAPTURE_DESIGN.md  HTTP_REQUEST_MONITORING.md  LEPTOS_CSR_VS_SSR.md  MIGRATION_NOTES.md  NETWORK_CAPTURE_SETUP.md  README.md  REFACTOR_COMPLETE.md  REFACTOR_PROPOSAL.md  SETUP_HTTP_MONITORING.md  SSR_MIGRATION.md  TESTING_ON_WINDOWS.md  USING_EXISTING_LIBRARIES.md
backend/server/: Cargo.toml
backend/server/src/: config.rs  handlers.rs  main.rs  query_validation.rs  routes.rs
backend/services/: Cargo.toml  build.rs
backend/services/src/: cache_service.rs  cached_query_service.rs  database.rs  docker_service.rs  lib.rs  network_monitor_service.rs  query_service.rs  service_map_service.rs
backend/services/src/entity/: container_logs.rs  container_stats.rs  docker_images.rs  http_requests.rs  image_versions.rs  mod.rs
backend/shared/: Cargo.toml
backend/shared/src/: lib.rs  models.rs
deploy/: FIX_PERMISSIONS.md  TIMESCALEDB_SETUP.md  docker-compose-local.yml  docker-compose.yml
deploy/Dockerfile/: api.Dockerfile  worker.Dockerfile
frontend/: .eslintrc.cjs  .gitignore  .prettierignore  Cargo.toml  Makefile  README.md  Trunk.toml  eslint.config.js  index.html  leptos.toml  package-lock.json  package.json  rsbuild.config.ts  style.css  tailwind.config.js  tsconfig.node.json
frontend/src/: App.tsx  app.rs  index.css  lib.rs  main.rs  style.css
frontend/src/components/: ContainerCard.tsx  ContainersView.tsx  LogsView.tsx  MetricsChart.tsx  PageLayout.tsx  Sidebar.tsx  StatCard.tsx  TotalStatsView.tsx  container_card.rs  containers_view.rs  logs_view.rs  metrics_chart.rs  mod.rs  stat_card.rs  total_stats_view.rs
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  separator.tsx
frontend/src/pages/: APM.tsx  Dashboard.tsx  DockerMonitor.tsx  ServiceMap.tsx  docker_monitor.rs  mod.rs
frontend/src/services/: api.rs  api.ts  mod.rs
frontend/src/types/: index.ts
frontend/src/utils/: formatting.rs  formatting.ts  mod.rs
migrations/: .env  .gitkeep  Cargo.toml
migrations/src/: lib.rs  m20241201_000001_create_container_stats.rs  m20241201_000002_create_container_logs.rs  m20241201_000003_create_container_info.rs  m20241201_000004_enable_timescaledb.rs  m20241201_000005_convert_to_hypertables.rs  m20241201_000006_create_docker_images.rs  m20241201_000007_create_image_versions.rs  m20241201_000008_create_indexes_and_aggregates.rs  m20241201_000009_add_retention_policies.rs  m20241201_000010_create_http_requests.rs  main.rs
worker/: .env  Cargo.toml
worker/src/: config.rs  main.rs  worker_service.rs
worker/src/entity/: container_info.rs  mod.rs
