[workspace]
members = [
    "server",
    "services",
    "shared",
]
resolver = "2"

[workspace.dependencies]
# Web framework
actix-web = "4.11.0"
actix-rt = "2.11.0"
actix-files = "0.6.8"
actix-cors = "0.7.1"

# Async runtime
tokio = { version = "1.48.0", features = ["full"] }
futures = "0.3.31"

# Docker API
bollard = "0.19.4"

# Database - SeaORM
sea-orm = { version = "2.0.0-rc.18", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros", "chrono"] }

# Redis
redis = { version = "1.0.0-rc.3", features = ["tokio-comp"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# Error handling
anyhow = "1.0.100"
thiserror = "2.0.17"

# Environment variables
dotenv = "0.15.0"

# Time handling
chrono = { version = "0.4.42", features = ["serde"] }

# Logging
env_logger = "0.11.8"
log = "0.4.28"

# HTTP client
reqwest = { version = "0.12.24", features = ["json"] }

# Network packet capture
pcap = "1.1"
# HTTP parser (lightweight, fast)
httparse = "1.10"

