[package]
name = "eyes-devine-frontend"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "server"
path = "src/main.rs"
required-features = ["ssr"]

[features]
default = []
ssr = [
    "leptos/ssr",
    "dep:leptos_axum",
    "dep:axum",
    "dep:tokio",
    "dep:tower",
    "dep:tower-http",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:anyhow",
]

[dependencies]
# Leptos (core - works for both client and server)
# Note: leptos/ssr feature is enabled via the ssr feature flag
leptos = { version = "0.8.12" }
leptos_meta = "0.8.5"
leptos_router = "0.8.9"

# Server-only dependencies (only included with ssr feature)
leptos_axum = { version = "0.8.6", optional = true }
axum = { version = "0.8.4", optional = true }
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros"], optional = true }
tower = { version = "0.5.1", optional = true }
tower-http = { version = "0.6.1", features = ["fs"], optional = true }
tracing = { version = "0.1.41", optional = true }
tracing-subscriber = { version = "0.3.20", optional = true }
anyhow = { version = "1.0.100", optional = true }

# Serialization (works for both)
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.140"
serde-wasm-bindgen = "0.6.5"

# Time (works for both)
chrono = { version = "0.4.41", features = ["serde"] }

# WASM bindings (client-side only)
wasm-bindgen = "0.2.105"
wasm-bindgen-futures = "0.4.55"
web-sys = "0.3.82"

