[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Leptos
leptos = { version = "0.8.12", features = ["csr"] }
leptos_meta = { version = "0.8.5" }
leptos_router = { version = "0.8.9" }

# Shared models
eyes-devine-shared = { path = "../backend/shared" }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.145"

# Time handling
chrono = { version = "0.4.42", features = ["wasmbind", "serde"] }

# Web
wasm-bindgen = "0.2.105"
wasm-bindgen-futures = "0.4.55"
web-sys = "0.3.82"
js-sys = "0.3.82"
console_error_panic_hook = "0.1.7"

# Collections
indexmap = "2.12.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.leptos]
# The name used by wasm-pack for the JS/WASM bundle
name = "frontend"
# The site root directory is where cargo-leptos generate all output. WARNING: all contents of this directory will be overwritten on rebuild.
site-root = "target/site"
# The site-root of the app, served by cargo-leptos. Typically the site-root folder.
site-pkg-dir = "pkg"
# The browser JS/WASM are loaded from here
# Optional, defaults to /pkg
site-pkg-url = "/pkg"
# The source CSS file. cargo-leptos will process this with the given stylesheet engine (currently tailwind)
style-file = "style.css"
# The JS/WASM bundle name. Defaults to the package name
app-name = "frontend"

