[package]
name = "migration"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "migration"
path = "src/main.rs"

[dependencies]
sea-orm = { version = "2.0.0-rc.18", features = ["sqlx-postgres", "runtime-tokio-native-tls"] }
sea-orm-migration = { version = "2.0.0-rc.18", features = ["sqlx-postgres", "runtime-tokio-native-tls"] }
tokio = { version = "1.48.0", features = ["full"] }
dotenv = "0.15"
async-trait = "0.1"

