[package]
name = "eyes-devine-worker"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "eyes-devine-worker"
path = "src/main.rs"

[dependencies]
# Web framework
actix-web = "4.11.0"
actix-rt = "2.11.0"

# Async runtime
tokio = { version = "1.48.0", features = ["full"] }

# Database - SeaORM
sea-orm = { version = "2.0.0-rc.18", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros", "chrono"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# Error handling
anyhow = "1.0.100"

# Environment variables
dotenv = "0.15.0"

# Time handling
chrono = { version = "0.4.42", features = ["serde"] }

# Logging
env_logger = "0.11.8"
log = "0.4.28"

# Local dependencies
eyes-devine-services = { path = "../backend/services" }
eyes-devine-shared = { path = "../backend/shared" }

