[package]
name = "eyes-devine-server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "eyes-devine-server"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
actix-web = { workspace = true }
actix-rt = { workspace = true }
actix-cors = { workspace = true }
dotenv = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
sea-orm = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }

# Local dependencies
eyes-devine-services = { path = "../services" }
eyes-devine-shared = { path = "../shared" }

